# steeloverseer

./: .gitignore  .sosrc  .stack-lts-2.22-osx.yaml  .stack-lts-2.22.yaml  .travis.yml  LICENSE  README.md  package.yaml  stack-lts-2.22-osx.yaml  stack-lts-2.22.yaml  stack-lts-3.22.yaml  stack.yaml  steeloverseer.cabal
.github/workflows/: haskell-ci.yml  stack.yml
app/: Main.hs
src/: ANSI.hs  ANSIColors.hs  Command.hs  Job.hs  Main.hs  Rule.hs  SOS.hs  Sos.hs  Template.hs  steeloverseer.cabal
src/Control/Concurrent/STM/TQueue/: Extra.hs
src/Sos/: Exception.hs  FileEvent.hs  Job.hs  JobQueue.hs  Rule.hs  Template.hs  Utils.hs
src/System/FSNotify/: Streaming.hs
test/Sos/: JobQueueSpec.hs  TemplateSpec.hs
