name: steeloverseer
version: 2.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: schell.scivally@synapsegrop.com, mitchellwrosen@gmail.com
stability: stable
homepage: https://github.com/steeloverseer/steeloverseer
bug-reports: https://github.com/steeloverseer/steeloverseer/issues
synopsis: A file watcher and development tool.
description:
    A command line tool that responds to filesystem events.
    Allows the user to automatically execute commands after
    files are added or updated. Watches files using regular
    expressions.
category: Development
author: Schell Scivally
extra-source-files:
    README.md

source-repository head
    type: git
    location: git://github.com/steeloverseer/steeloverseer.git

library
    exposed-modules:
        ANSI
        Job
        Rule
        Sos
        Template
    build-depends:
        base -any,
        aeson -any,
        ansi-terminal -any,
        async -any,
        bytestring -any,
        containers -any,
        megaparsec -any,
        microlens -any,
        mtl -any,
        process -any,
        semigroups -any,
        regex-tdfa -any,
        stm -any,
        text -any,
        yaml -any
    hs-source-dirs: src
    ghc-options: -Wall

executable sos
    main-is: Main.hs
    build-depends:
        base -any,
        bytestring -any,
        directory -any,
        fsnotify -any,
        filepath -any,
        optparse-applicative -any,
        regex-tdfa -any,
        semigroups -any,
        steeloverseer -any,
        yaml -any
    hs-source-dirs: app
    ghc-options: -Wall -threaded

