name: steeloverseer
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
--       +-+------- breaking API changes
--       | | +----- non-breaking API additions
--       | | | +--- code changes with no API change
version: 2.0.0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: schell.scivally@synapsegrop.com
stability: stable
homepage: https://github.com/schell/steeloverseer
bug-reports: https://github.com/schell/steeloverseer/issues
synopsis: A file watcher and development tool.
description:
    A command line tool that responds to filesystem events.
    Allows the user to automatically execute commands after
    files are added or updated. Watches files using regular
    expressions.
category: Development
author: Schell Scivally, Mitchell Rosen
extra-source-files:
    README.md

source-repository head
    type: git
    location: git://github.com/schell/steeloverseer.git

library
    exposed-modules:
        ANSI
        Job
        Rule
        Sos
        Template
    build-depends:
        base >= 4.0 && < 6.0
      , aeson >= 0.8
      , ansi-terminal >= 0.6.2
      , async >= 2.0
      , bytestring >= 0.10
      , containers >= 0.5
      , megaparsec >= 4.4.0
      , microlens >= 0.2
      , mtl >= 2.2
      , process >= 1.2
      , semigroups >= 0.16
      , regex-tdfa >= 1.2
      , stm >= 2.4
      , text >= 1.2
      , yaml >= 0.8
    hs-source-dirs: src
    ghc-options: -Wall

executable sos
    main-is: Main.hs
    build-depends:
        base >= 4.0 && < 6.0
      , steeloverseer
      , bytestring >= 0.10
      , directory >= 1.2
      , fsnotify >= 0.2
      , filepath >= 1.4
      , optparse-applicative >= 0.11
      , regex-tdfa >= 1.2
      , semigroups >= 0.16
      , yaml >= 0.8
    hs-source-dirs: app
    ghc-options: -Wall -threaded

